[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.2"
pandas = "^2.2.1"
xlwings = "^0.30.15"
pandera = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
coverage = "^7.3"
mypy = "^1.9.0"
pandera = {extras = ["mypy"], version = "^0.18.0"}
vcrpy = "^6.0.1"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "--capture=tee-sys --no-header --quiet --tb=short"

[tool.coverage.run]
branch = true
omit = ["tests/*"]
dynamic_context = "test_function"

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true
