[tool.poetry]
name = "stonks"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.6"
pandas = "^2.2.3"
xlwings = "^0.33.15"
pandera = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
mypy = "^1.17.1"
pandera = {extras = ["mypy"], version = "^0.25.0"}
vcrpy = "^7.0.0"
ruff = "^0.12.7"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = [
  "--capture=tee-sys", # capture sys.stdout/stderr and live print to the console
  "--tb=short", # use a shorter traceback format
  "--import-mode=importlib" # recommended by pytest for new projects
]

[tool.coverage.run]
branch = true
source = ["stonks"]
omit = ["tests/*"]
dynamic_context = "test_function"

[tool.coverage.html]
show_contexts = true

[tool.mypy]
strict = true
